Fixed task whitespace

--- a/src/components/IndividualTask/IndividualTask.module.scss
+++ b/src/components/IndividualTask/IndividualTask.module.scss
@@ -1,82 +1,77 @@
 @import "../../variables";
 
-
 .task {
-    font-size: $font-size-components/1.25;
-    height: 4.5vh;
-    width: 100%;
-    margin: 10% 0;
-    background: $bar-colour;
-    border-radius: 50px;
-    padding-left:5%;
-    color: white;
-    border: none;
+  font-size: $font-size-components/1.25;
+  height: 4.5vh;
+  width: 100%;
+  margin-top: 20px;
+  background: $bar-colour;
+  border-radius: 50px;
+  padding-left: 5%;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  &:focus {
+    outline: none;
+  }
+  .buttonContainer {
+    height: 100%;
+    width: 25%;
+    color: $bar-colour;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    &:focus {
-        outline: none;
-    }
-    .buttonContainer {
-        height: 100%;
-        width:25%;
-        color: $bar-colour;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    
+    align-items: center;
+
     .taskNotComplete {
+      margin: 0;
+      opacity: 0.7;
+      background-color: $colour-2;
+      height: 5vh;
+      width: 5vh;
+      color: $tick-colour;
+      border: none;
+      border-radius: 50%;
+      outline: none;
+
+      .checkIcon {
         margin: 0;
-        opacity: 0.7;
-        background-color: $colour-2;
-        height: 5vh;
-        width:5vh;
-        color: $tick-colour;
-        border: none;
-        border-radius: 50%;
-        outline: none;
-        
-
-         .checkIcon {
-            margin: 0;
-            width: 50%;
-            height: 50%;
-            pointer-events: none;
-        }
-
+        width: 50%;
+        height: 50%;
+        pointer-events: none;
+      }
     }
 
     .taskComplete {
+      margin: 0;
+      opacity: 1;
+      background-color: $colour-2;
+      height: 5vh;
+      width: 5vh;
+      color: $tick-colour;
+      border: none;
+      border-radius: 50%;
+      outline: none;
+
+      .checkIcon {
         margin: 0;
-        opacity: 1;
-        background-color: $colour-2;
-        height: 5vh;
-        width:5vh;
-        color: $tick-colour;
-        border: none;
-        border-radius: 50%;
-        outline: none;
-        
-
-         .checkIcon {
-            margin: 0;
-            width: 50%;
-            height: 50%;
-            pointer-events: none;
-        }
-
+        width: 50%;
+        height: 50%;
+        pointer-events: none;
+      }
     }
 
     .taskDelete {
-        margin: 0;
-        font-size: 0.9rem;
-        background-color: $colour-2;
-        height: 5vh;
-        width: 5vh;
-        color: $tick-colour;
-        border: none;
-        border-radius: 50%;
-        outline: none;
+      margin: 0;
+      font-size: 0.9rem;
+      background-color: $colour-2;
+      height: 5vh;
+      width: 5vh;
+      color: $tick-colour;
+      border: none;
+      border-radius: 50%;
+      outline: none;
     }
-}
+  }
 }
